src/test/ui/consts/min_const_fn/min_const_fn_dyn.nll.stderr
error: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:21:5
   |
LL |     x.0.field;
   |     ^^^^^^^^^

error: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:24:66
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasDyn { field: &0 }) }
   |                                                                  ^^

error[E0597]: borrowed value does not live long enough
  --> $DIR/min_const_fn_dyn.rs:24:67
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasDyn { field: &0 }) }
   |                                                                   ^    - temporary value only lives until here
   |                                                                   |
   |                                                                   temporary value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
